2015-02-09  Adhemerval Zanellla  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc32/power4/multiarch/Makefile
	[sysdep_routines]: Remove wide chars objects.
	[wcsmbs]: New rule for wide char objects.

	* sysdeps/powerpc/powerpc64/multiarch/Makefile [sysdep_routines]:
	Remove wordcopy-power6 obejct.
	* sysdeps/powerpc/powerpc64/multiarch/memmove-ppc64.c (__memmove_ppc):
	Use local call for wordcopy and memcpy symbols.
	* sysdeps/powerpc/powerpc64/multiarch/wordcopy-power6.c: Remove file.
	* sysdeps/powerpc/powerpc64/multiarch/wordcopy-ppc64.c: Add default
	implementation for loader.
	* sysdeps/powerpc/powerpc64/multiarch/wordcopy.c: Remove file.

	* sysdeps/powerpc/powerpc64/multiarch/Makefile [sysdep_routines]:
	Remove wordcopy-power7 object.
	* sysdeps/powerpc/powerpc64/multiarch/wordcopy-power7.c: Remove file.
	* sysdeps/powerpc/powerpc64/multiarch/wordcopy.c
	(_wordcopy_fwd_aligned): Remove POWER7 specialization.
	(_wordcopy_fwd_dest_aligned): Likewise.
	(_wordcopy_bwd_aligned): Likewise.
	(_wordcopy_bwd_dest_aligned): Likewise.

	* sysdeps/powerpc/powerpc64/multiarch/bcopy-ppc64.c (__bcopy_ppc):
	Rewrite to call __memmove_ppc instead of include default
	implementation.

	* sysdeps/powerpc/powerpc64/multiarch/Makefile [sysdep_routines]:
	Remove wide chars objects.
	[wcsmbs]: New rule for wide char objects.

2015-02-09  Andreas Schwab  <schwab@suse.de>

	[BZ #17912]
	* sysdeps/unix/sysv/linux/bits/fcntl-linux.h (__O_TMPFILE): Define
	in terms of __O_DIRECTORY.

2015-02-08  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* time/getdate.c: Include <stdbool.h>.
	* sysdeps/gnu/unwind-resume.c [!PTR_MANGLE] (__libgcc_s_init): Do not
	call PTR_MANGLE.
	[!PTR_DEMANGLE] (_Unwind_Resume, __gcc_personality_v0): Do not call
	PTR_DEMANGLE.

2015-02-07  Paul Eggert  <eggert@cs.ucla.edu>

	Add ersatz _Static_assert on older C hosts
	* misc/sys/cdefs.h (_Static_assert): Define a substitute, if on a
	pre-C11 C platform that is not known to support _Static_assert.
